# A-Rapid-Introduction-to-Modern-Cmake

./: CMakeLists.txt  LICENSE  README.md  config.toml
Csapp/: CMakeLists.txt
Csapp/include/: csapp.h
Csapp/src/: csapp.c
Driver/: CMakeLists.txt  anothermain.c  main.c
Layer1/: CMakeLists.txt
Layer1/Log/: CMakeLists.txt
Layer1/Mylib/: CMakeLists.txt
Layer1/Mylib/include/: mylib.h
Layer1/Mylib/src/: mylib.c  mylib_private.h
Layer2/: CMakeLists.txt
Layer2/Csapp/: CMakeLists.txt
Libraries/: CMakeLists.txt
Libraries/Csapp/: CMakeLists.txt
Libraries/Csapp/src/: csapp.c
Libraries/Log/: CMakeLists.txt
Log/: CMakeLists.txt
Mylib/: CMakeLists.txt
Mylib/include/: mylib.h
Mylib/src/: mylib.c  mylib_private.h
cmake/modules/: FindClangFormat.cmake  clang-format.cmake  dependency-graph.cmake
cmake/scripts/: clang-format-check-changed  clang-format-check-changed.py
content/: _index.md
content/Introduction/: _index.md
content/Step1/: Lab1.md  _index.md
content/Step2/: Lab2.md  _index.md
content/Step3/: Lab3.md  _index.md
resources/_gen/assets/scss/css/: ace.scss_b95b077eb505d5c0aff8055eaced30ad.content
